5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1644_2445.log
== TEST (2019-04-16 13:07:34) 
-- CODE:
var1= input("F/C: ")
var2= int(iput("Num: "))

if var1 == "F": 
	print(5/9(var2-32))
else:
	print(var2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2= int(iput("Num: "))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:07:52) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	print(5/9(var2-32))
else:
	print(var2)

-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:08:37) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(xx)
else:
	print(var2)

-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:09:01) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2)

-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:09:05) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2)

-- EXECUTION TIME:
0.14875
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
320
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:10:37) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2)

-- OUTPUT:
320
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:13:30) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2*1.8+32)

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:13:43) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2*1.8+32)

-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:13:52) 
-- CODE:
var1= input("F/C: ")
var2= int(input("Num: "))

if var1 == "F": 
	xx=5/9*(var2-32)
	print(round(xx,2))
else:
	print(var2*1.8+32)

-- EXECUTION TIME:
0.214951
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
